# d6

./: Makefile  README.md  pyproject.toml
d6-api/: Makefile  README.md  pyproject.toml
d6-api/d6_api/: __init__.py  app.py  app_logic.py  models.py  util.py
d6-api/d6_api/data/: data.json  warhammer_datasheets_10e.toml
d6-api/d6_api/migrations/: 1741817834_initial_db.py  1741873613_autoincrement_id.py  1742379022_.py  1743007679_init.py
d6-api/d6_api/templates/: play.html
d6-api/d6_api/tests/: conftest.py  test_app.py  test_app_logic.py  test_simulate_attack.py
d6-api/d6_api/tests/fixtures/: client.py
d6-gui/: README.md  package-lock.json  package.json
d6-gui/public/: index.html  manifest.json
d6-gui/src/: index.css
d6-gui/src/components/: App.js
d6_api/: __init__.py  app.py  app_logic.py  models.py  util.py
d6_api/data/: data.json
d6_api/migrations/: 1743008384_init.py  1743280937_init.py  1743589640_init.py  1743677059_initial_migration.py
d6_api/templates/: play.html
d6_api/tests/: conftest.py  test_app.py  test_app_logic.py
d6_api/tests/fixtures/: client.py
src/: app.py
src/pyd6/: __init__.py  pyd6.py  util.py
src/pyd6/data/: warhammer_datasheets_10e.toml
