[project]
name = "pyd6"
version = "0.0.1"
description = "A battle simulator to assist tabletop dice games such as Warhammer 40k"
authors = [
    {name = "Chris Bryan",email = "chrismbryan@gmail.com"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotdict (>=0.1,<0.2)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/cmbryan/d6"
Issues = "https://github.com/cmbryan/d6/issues"
