[project]
name = "d6-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Bryan",email = "chrismbryan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "dotdict (>=0.1,<0.2)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "d6_api", from = "src"}]
package-mode = false  # This isn't meant for PyPI


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
